// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PhonemeEngine > Regression Contract (Corpus Sample) > keeps analyzeDeep output stable for a deterministic corpus sample 1`] = `
{
  "baseline": [
    {
      "extendedRhymeKeys": [
        "AE-open",
      ],
      "rhymeKey": "AE-open",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "TH",
          "stress": 1,
          "vowel": "EH1",
          "vowelFamily": "AE",
        },
      ],
      "word": "THE",
    },
    {
      "extendedRhymeKeys": [
        "AE-N",
      ],
      "rhymeKey": "AE-N",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "N",
          "index": 0,
          "onset": "P",
          "stress": 1,
          "vowel": "EH1",
          "vowelFamily": "AE",
        },
      ],
      "word": "PEN",
    },
    {
      "extendedRhymeKeys": [
        "EY-K",
        "A-open/EY-K",
      ],
      "rhymeKey": "EY-K",
      "stressPattern": "10",
      "syllableCount": 2,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "",
          "stress": 1,
          "vowel": "AA1",
          "vowelFamily": "A",
        },
        {
          "coda": "K",
          "index": 1,
          "onset": "B",
          "stress": 0,
          "vowel": "EY0",
          "vowelFamily": "EY",
        },
      ],
      "word": "OBAKE",
    },
    {
      "extendedRhymeKeys": [
        "AE-L",
        "IH-open/AE-L",
      ],
      "rhymeKey": "AE-L",
      "stressPattern": "01",
      "syllableCount": 2,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "LYR",
          "stress": 0,
          "vowel": "IH0",
          "vowelFamily": "IH",
        },
        {
          "coda": "L",
          "index": 1,
          "onset": "K",
          "stress": 1,
          "vowel": "AE1",
          "vowelFamily": "AE",
        },
      ],
      "word": "LYRICAL",
    },
    {
      "extendedRhymeKeys": [
        "EY-G",
        "A-open/EY-G",
      ],
      "rhymeKey": "EY-G",
      "stressPattern": "01",
      "syllableCount": 2,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "H",
          "stress": 0,
          "vowel": "AA0",
          "vowelFamily": "A",
        },
        {
          "coda": "G",
          "index": 1,
          "onset": "K",
          "stress": 1,
          "vowel": "EY1",
          "vowelFamily": "EY",
        },
      ],
      "word": "HOKAGE",
    },
    {
      "extendedRhymeKeys": [
        "AE-L",
        "IH-open/AE-L",
      ],
      "rhymeKey": "AE-L",
      "stressPattern": "01",
      "syllableCount": 2,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "MYST",
          "stress": 0,
          "vowel": "IH0",
          "vowelFamily": "IH",
        },
        {
          "coda": "L",
          "index": 1,
          "onset": "K",
          "stress": 1,
          "vowel": "AE1",
          "vowelFamily": "AE",
        },
      ],
      "word": "MYSTICAL",
    },
    {
      "extendedRhymeKeys": [
        "AW-open",
      ],
      "rhymeKey": "AW-open",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "FL",
          "stress": 1,
          "vowel": "AW1",
          "vowelFamily": "AW",
        },
      ],
      "word": "FLOW",
    },
    {
      "extendedRhymeKeys": [
        "AE-open",
        "AE-open/AE-open",
      ],
      "rhymeKey": "AE-open",
      "stressPattern": "01",
      "syllableCount": 2,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "JH",
          "stress": 0,
          "vowel": "AE0",
          "vowelFamily": "AE",
        },
        {
          "coda": "",
          "index": 1,
          "onset": "V",
          "stress": 1,
          "vowel": "AE1",
          "vowelFamily": "AE",
        },
      ],
      "word": "JAVA",
    },
    {
      "extendedRhymeKeys": [
        "AE-open",
        "AW-open/AE-open",
      ],
      "rhymeKey": "AE-open",
      "stressPattern": "10",
      "syllableCount": 2,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "Y",
          "stress": 1,
          "vowel": "AW1",
          "vowelFamily": "AW",
        },
        {
          "coda": "",
          "index": 1,
          "onset": "R",
          "stress": 0,
          "vowel": "EH0",
          "vowelFamily": "AE",
        },
      ],
      "word": "YOURE",
    },
    {
      "extendedRhymeKeys": [
        "IH-NG",
        "IH-P/IH-NG",
      ],
      "rhymeKey": "IH-NG",
      "stressPattern": "10",
      "syllableCount": 2,
      "syllables": [
        {
          "coda": "P",
          "index": 0,
          "onset": "S",
          "stress": 1,
          "vowel": "IH1",
          "vowelFamily": "IH",
        },
        {
          "coda": "NG",
          "index": 1,
          "onset": "P",
          "stress": 0,
          "vowel": "IH0",
          "vowelFamily": "IH",
        },
      ],
      "word": "SIPPING",
    },
    {
      "extendedRhymeKeys": [
        "OW-L",
      ],
      "rhymeKey": "OW-L",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "L",
          "index": 0,
          "onset": "W",
          "stress": 1,
          "vowel": "OW1",
          "vowelFamily": "OW",
        },
      ],
      "word": "WHOLE",
    },
    {
      "extendedRhymeKeys": [
        "AE-open",
        "AE-T/AE-open",
      ],
      "rhymeKey": "AE-open",
      "stressPattern": "10",
      "syllableCount": 2,
      "syllables": [
        {
          "coda": "T",
          "index": 0,
          "onset": "L",
          "stress": 1,
          "vowel": "AE1",
          "vowelFamily": "AE",
        },
        {
          "coda": "",
          "index": 1,
          "onset": "T",
          "stress": 0,
          "vowel": "EH0",
          "vowelFamily": "AE",
        },
      ],
      "word": "LATTE",
    },
    {
      "extendedRhymeKeys": [
        "AE-L",
        "IH-open/AE-L",
      ],
      "rhymeKey": "AE-L",
      "stressPattern": "01",
      "syllableCount": 2,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "FYS",
          "stress": 0,
          "vowel": "IH0",
          "vowelFamily": "IH",
        },
        {
          "coda": "L",
          "index": 1,
          "onset": "K",
          "stress": 1,
          "vowel": "AE1",
          "vowelFamily": "AE",
        },
      ],
      "word": "PHYSICAL",
    },
    {
      "extendedRhymeKeys": [
        "AW-TH",
      ],
      "rhymeKey": "AW-TH",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "TH",
          "index": 0,
          "onset": "GR",
          "stress": 1,
          "vowel": "AW1",
          "vowelFamily": "AW",
        },
      ],
      "word": "GROWTH",
    },
    {
      "extendedRhymeKeys": [
        "AE-open",
        "AE-N/AE-open",
      ],
      "rhymeKey": "AE-open",
      "stressPattern": "01",
      "syllableCount": 2,
      "syllables": [
        {
          "coda": "N",
          "index": 0,
          "onset": "GR",
          "stress": 0,
          "vowel": "AE0",
          "vowelFamily": "AE",
        },
        {
          "coda": "",
          "index": 1,
          "onset": "D",
          "stress": 1,
          "vowel": "EH1",
          "vowelFamily": "AE",
        },
      ],
      "word": "GRANDE",
    },
    {
      "extendedRhymeKeys": [
        "AE-open",
        "IH-open/AE-open",
        "IH-N/IH-open/AE-open",
        "IH-N/IH-N/IH-open/AE-open",
      ],
      "rhymeKey": "AE-open",
      "stressPattern": "0001",
      "syllableCount": 4,
      "syllables": [
        {
          "coda": "N",
          "index": 0,
          "onset": "",
          "stress": 0,
          "vowel": "IH0",
          "vowelFamily": "IH",
        },
        {
          "coda": "N",
          "index": 1,
          "onset": "V",
          "stress": 0,
          "vowel": "IH0",
          "vowelFamily": "IH",
        },
        {
          "coda": "",
          "index": 2,
          "onset": "K",
          "stress": 0,
          "vowel": "IH0",
          "vowelFamily": "IH",
        },
        {
          "coda": "",
          "index": 3,
          "onset": "BL",
          "stress": 1,
          "vowel": "EH1",
          "vowelFamily": "AE",
        },
      ],
      "word": "INVINCIBLE",
    },
    {
      "extendedRhymeKeys": [
        "OW-S",
      ],
      "rhymeKey": "OW-S",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "S",
          "index": 0,
          "onset": "PR",
          "stress": 1,
          "vowel": "OW1",
          "vowelFamily": "OW",
        },
      ],
      "word": "PROSE",
    },
    {
      "extendedRhymeKeys": [
        "AY-open",
        "AE-open/AY-open",
        "A-T/AE-open/AY-open",
      ],
      "rhymeKey": "AY-open",
      "stressPattern": "001",
      "syllableCount": 3,
      "syllables": [
        {
          "coda": "T",
          "index": 0,
          "onset": "P",
          "stress": 0,
          "vowel": "AA0",
          "vowelFamily": "A",
        },
        {
          "coda": "",
          "index": 1,
          "onset": "T",
          "stress": 0,
          "vowel": "EH0",
          "vowelFamily": "AE",
        },
        {
          "coda": "",
          "index": 2,
          "onset": "R",
          "stress": 1,
          "vowel": "AY1",
          "vowelFamily": "AY",
        },
      ],
      "word": "POTTERY",
    },
    {
      "extendedRhymeKeys": [
        "IH-NG",
        "A-L/IH-NG",
      ],
      "rhymeKey": "IH-NG",
      "stressPattern": "10",
      "syllableCount": 2,
      "syllables": [
        {
          "coda": "L",
          "index": 0,
          "onset": "M",
          "stress": 1,
          "vowel": "AA1",
          "vowelFamily": "A",
        },
        {
          "coda": "NG",
          "index": 1,
          "onset": "D",
          "stress": 0,
          "vowel": "IH0",
          "vowelFamily": "IH",
        },
      ],
      "word": "MOLDING",
    },
    {
      "extendedRhymeKeys": [
        "OW-N",
      ],
      "rhymeKey": "OW-N",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "N",
          "index": 0,
          "onset": "ST",
          "stress": 1,
          "vowel": "OW1",
          "vowelFamily": "OW",
        },
      ],
      "word": "STONE",
    },
    {
      "extendedRhymeKeys": [
        "AE-open",
        "A-T/AE-open",
      ],
      "rhymeKey": "AE-open",
      "stressPattern": "01",
      "syllableCount": 2,
      "syllables": [
        {
          "coda": "T",
          "index": 0,
          "onset": "G",
          "stress": 0,
          "vowel": "AA0",
          "vowelFamily": "A",
        },
        {
          "coda": "",
          "index": 1,
          "onset": "T",
          "stress": 1,
          "vowel": "AE1",
          "vowelFamily": "AE",
        },
      ],
      "word": "GOTTA",
    },
    {
      "extendedRhymeKeys": [
        "AE-open",
      ],
      "rhymeKey": "AE-open",
      "stressPattern": "1",
      "syllableCount": 1,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "B",
          "stress": 1,
          "vowel": "EH1",
          "vowelFamily": "AE",
        },
      ],
      "word": "BE",
    },
    {
      "extendedRhymeKeys": [
        "AE-D",
        "A-open/AE-D",
        "AE-open/A-open/AE-D",
      ],
      "rhymeKey": "AE-D",
      "stressPattern": "100",
      "syllableCount": 3,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "D",
          "stress": 1,
          "vowel": "EH1",
          "vowelFamily": "AE",
        },
        {
          "coda": "",
          "index": 1,
          "onset": "V",
          "stress": 0,
          "vowel": "AA0",
          "vowelFamily": "A",
        },
        {
          "coda": "D",
          "index": 2,
          "onset": "T",
          "stress": 0,
          "vowel": "EH0",
          "vowelFamily": "AE",
        },
      ],
      "word": "DEVOTED",
    },
    {
      "extendedRhymeKeys": [
        "AY-open",
        "AE-open/AY-open",
        "A-open/AE-open/AY-open",
      ],
      "rhymeKey": "AY-open",
      "stressPattern": "001",
      "syllableCount": 3,
      "syllables": [
        {
          "coda": "",
          "index": 0,
          "onset": "P",
          "stress": 0,
          "vowel": "AA0",
          "vowelFamily": "A",
        },
        {
          "coda": "",
          "index": 1,
          "onset": "",
          "stress": 0,
          "vowel": "EH0",
          "vowelFamily": "AE",
        },
        {
          "coda": "",
          "index": 2,
          "onset": "TR",
          "stress": 1,
          "vowel": "AY1",
          "vowelFamily": "AY",
        },
      ],
      "word": "POETRY",
    },
  ],
  "words": [
    "the",
    "pen",
    "obake",
    "lyrical",
    "hokage",
    "mystical",
    "flow",
    "java",
    "youre",
    "sipping",
    "whole",
    "latte",
    "physical",
    "growth",
    "grande",
    "invincible",
    "prose",
    "pottery",
    "molding",
    "stone",
    "gotta",
    "be",
    "devoted",
    "poetry",
  ],
}
`;

exports[`PhonemeEngine > Regression Contract (Corpus Sample) > keeps analyzeWord output stable for a deterministic corpus sample 1`] = `
{
  "baseline": [
    {
      "coda": null,
      "phonemes": [
        "TH",
        "EH1",
      ],
      "rhymeKey": "AE-open",
      "syllableCount": 1,
      "vowelFamily": "AE",
      "word": "THE",
    },
    {
      "coda": "N",
      "phonemes": [
        "P",
        "EH1",
        "N",
      ],
      "rhymeKey": "AE-N",
      "syllableCount": 1,
      "vowelFamily": "AE",
      "word": "PEN",
    },
    {
      "coda": "K",
      "phonemes": [
        "AA1",
        "B",
        "EY0",
        "K",
      ],
      "rhymeKey": "EY-K",
      "syllableCount": 2,
      "vowelFamily": "A",
      "word": "OBAKE",
    },
    {
      "coda": "L",
      "phonemes": [
        "L",
        "Y",
        "R",
        "IH0",
        "K",
        "AE1",
        "L",
      ],
      "rhymeKey": "AE-L",
      "syllableCount": 2,
      "vowelFamily": "AE",
      "word": "LYRICAL",
    },
    {
      "coda": "G",
      "phonemes": [
        "H",
        "AA0",
        "K",
        "EY1",
        "G",
      ],
      "rhymeKey": "EY-G",
      "syllableCount": 2,
      "vowelFamily": "EY",
      "word": "HOKAGE",
    },
    {
      "coda": "L",
      "phonemes": [
        "M",
        "Y",
        "S",
        "T",
        "IH0",
        "K",
        "AE1",
        "L",
      ],
      "rhymeKey": "AE-L",
      "syllableCount": 2,
      "vowelFamily": "AE",
      "word": "MYSTICAL",
    },
    {
      "coda": null,
      "phonemes": [
        "F",
        "L",
        "AW1",
      ],
      "rhymeKey": "AW-open",
      "syllableCount": 1,
      "vowelFamily": "AW",
      "word": "FLOW",
    },
    {
      "coda": null,
      "phonemes": [
        "JH",
        "AE0",
        "V",
        "AE1",
      ],
      "rhymeKey": "AE-open",
      "syllableCount": 2,
      "vowelFamily": "AE",
      "word": "JAVA",
    },
    {
      "coda": null,
      "phonemes": [
        "Y",
        "AW1",
        "R",
        "EH0",
      ],
      "rhymeKey": "AE-open",
      "syllableCount": 2,
      "vowelFamily": "AW",
      "word": "YOURE",
    },
    {
      "coda": "NG",
      "phonemes": [
        "S",
        "IH1",
        "P",
        "P",
        "IH0",
        "NG",
      ],
      "rhymeKey": "IH-NG",
      "syllableCount": 2,
      "vowelFamily": "IH",
      "word": "SIPPING",
    },
    {
      "coda": "L",
      "phonemes": [
        "W",
        "OW1",
        "L",
      ],
      "rhymeKey": "OW-L",
      "syllableCount": 1,
      "vowelFamily": "OW",
      "word": "WHOLE",
    },
    {
      "coda": null,
      "phonemes": [
        "L",
        "AE1",
        "T",
        "T",
        "EH0",
      ],
      "rhymeKey": "AE-open",
      "syllableCount": 2,
      "vowelFamily": "AE",
      "word": "LATTE",
    },
    {
      "coda": "L",
      "phonemes": [
        "F",
        "Y",
        "S",
        "IH0",
        "K",
        "AE1",
        "L",
      ],
      "rhymeKey": "AE-L",
      "syllableCount": 2,
      "vowelFamily": "AE",
      "word": "PHYSICAL",
    },
    {
      "coda": "TH",
      "phonemes": [
        "G",
        "R",
        "AW1",
        "TH",
      ],
      "rhymeKey": "AW-TH",
      "syllableCount": 1,
      "vowelFamily": "AW",
      "word": "GROWTH",
    },
    {
      "coda": null,
      "phonemes": [
        "G",
        "R",
        "AE0",
        "N",
        "D",
        "EH1",
      ],
      "rhymeKey": "AE-open",
      "syllableCount": 2,
      "vowelFamily": "AE",
      "word": "GRANDE",
    },
    {
      "coda": null,
      "phonemes": [
        "IH0",
        "N",
        "V",
        "IH0",
        "N",
        "K",
        "IH0",
        "B",
        "L",
        "EH1",
      ],
      "rhymeKey": "AE-open",
      "syllableCount": 4,
      "vowelFamily": "AE",
      "word": "INVINCIBLE",
    },
    {
      "coda": "S",
      "phonemes": [
        "P",
        "R",
        "OW1",
        "S",
      ],
      "rhymeKey": "OW-S",
      "syllableCount": 1,
      "vowelFamily": "OW",
      "word": "PROSE",
    },
    {
      "coda": null,
      "phonemes": [
        "P",
        "AA0",
        "T",
        "T",
        "EH0",
        "R",
        "AY1",
      ],
      "rhymeKey": "AY-open",
      "syllableCount": 3,
      "vowelFamily": "AY",
      "word": "POTTERY",
    },
    {
      "coda": "NG",
      "phonemes": [
        "M",
        "AA1",
        "L",
        "D",
        "IH0",
        "NG",
      ],
      "rhymeKey": "IH-NG",
      "syllableCount": 2,
      "vowelFamily": "A",
      "word": "MOLDING",
    },
    {
      "coda": "N",
      "phonemes": [
        "S",
        "T",
        "OW1",
        "N",
      ],
      "rhymeKey": "OW-N",
      "syllableCount": 1,
      "vowelFamily": "OW",
      "word": "STONE",
    },
    {
      "coda": null,
      "phonemes": [
        "G",
        "AA0",
        "T",
        "T",
        "AE1",
      ],
      "rhymeKey": "AE-open",
      "syllableCount": 2,
      "vowelFamily": "AE",
      "word": "GOTTA",
    },
    {
      "coda": null,
      "phonemes": [
        "B",
        "EH1",
      ],
      "rhymeKey": "AE-open",
      "syllableCount": 1,
      "vowelFamily": "AE",
      "word": "BE",
    },
    {
      "coda": "D",
      "phonemes": [
        "D",
        "EH1",
        "V",
        "AA0",
        "T",
        "EH0",
        "D",
      ],
      "rhymeKey": "AE-D",
      "syllableCount": 3,
      "vowelFamily": "AE",
      "word": "DEVOTED",
    },
    {
      "coda": null,
      "phonemes": [
        "P",
        "AA0",
        "EH0",
        "T",
        "R",
        "AY1",
      ],
      "rhymeKey": "AY-open",
      "syllableCount": 3,
      "vowelFamily": "AY",
      "word": "POETRY",
    },
  ],
  "words": [
    "the",
    "pen",
    "obake",
    "lyrical",
    "hokage",
    "mystical",
    "flow",
    "java",
    "youre",
    "sipping",
    "whole",
    "latte",
    "physical",
    "growth",
    "grande",
    "invincible",
    "prose",
    "pottery",
    "molding",
    "stone",
    "gotta",
    "be",
    "devoted",
    "poetry",
  ],
}
`;
